Added sticky footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="container main-content">
+        <div class="container main-content" id="content">
             <div class="row">
                 <div class="col-lg-12">
                     <h1>About Me</h1>
@@ -44,6 +44,11 @@
                 </div>
             </div>
         </div>
+        <footer class="footer mt-auto py-3 fixed-bottom">
+                <div>
+                  <span>Copyright ©</span>
+                </div>
+        </footer>
     
 </body>
 </html>
