Fixed issue with footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <footer class="footer mt-auto py-3 fixed-bottom">
+        <footer class="footer mt-auto py-3">
                 <div>
                   <span>Copyright ©</span>
                 </div>
