--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             </div>
 
         </div>
-        <footer class="footer mt-auto py-3">
+        <footer class="footer mt-auto py-3 fixed-bottom">
                 <div>
                   <span>Copyright ©</span>
                 </div>
