--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                                     <label for="exampleFormControlTextarea1">Message</label>
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn">Submit</button>
                     </form>
                 </div>
             </div>
