Added link to Hangman in portoflio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         <div class="row">
                 <div class="col-lg-6">
                     <img src="images/adrien-olichon-X8o-P23flgI-unsplash.jpg" alt="Hangman" class="work">
-                    <h2>Hangman</h2>
+                    <h2><a href="https://bhuber23.github.io/Word-Guess-Game/">Hangman</a></h2>
                 </div>
                 <div class="col-lg-6">
                     <img src="images/jr-korpa-stwHyPWNtbI-unsplash.jpg" alt="RPG Game" class="work">
