Updated portfolio with Crystal Game and updated Hangman image

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,12 @@
         <!-- <div class="container"> -->
         <div class="row">
                 <div class="col-lg-6">
-                    <img src="images/adrien-olichon-X8o-P23flgI-unsplash.jpg" alt="Hangman" class="work">
+                    <img src="images/Screen Shot 2019-10-26 at 5.38.42 PM.png" alt="Hangman" class="work">
                     <h2><a href="https://bhuber23.github.io/Word-Guess-Game/">Hangman</a></h2>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/jr-korpa-stwHyPWNtbI-unsplash.jpg" alt="RPG Game" class="work">
-                    <h2>RPG Game</h2>
+                    <img src="images/Screen Shot 2019-10-26 at 5.39.10 PM.png" alt="Crystal Collector" class="work">
+                    <h2><a href="https://bhuber23.github.io/unit-4-game/">Crystal Collector</a></h2>
                 </div>
         </div>
         <div class="row">
@@ -60,6 +60,10 @@
             <div class="col-lg-6">
                 <img src="images/serenity-mitchell-jHz1pcO7Zrw-unsplash.jpg" alt="Rock Paper Scissors" class="work">
                 <h2>Rock Paper Scissors</h2>
+            </div>
+            <div class="col-lg-6">
+                <img src="images/jr-korpa-stwHyPWNtbI-unsplash.jpg" alt="RPG Game" class="work">
+                <h2>RPG Game</h2>
             </div>
         </div>
         </div>
