Updated portfolio with trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,8 @@
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <img src="images/anh-tuan-to-U_jOkvCmkCY-unsplash.jpg" alt="Trivia Game" class="work">
-                <h2>Trivia Game</h2>
+                <img src="images/Screen Shot 2019-11-02 at 10.35.21 PM.png" alt="Trivia Game" class="work">
+                <h2><a href="https://bhuber23.github.io/TriviaGame/">Trivia Game</a></h2>
             </div>
             <div class="col-lg-6">
                 <img src="images/pawel-czerwinski-MOs_TzNcQ2Q-unsplash.jpg" alt="Rutgers Info Widget" class="work">
