--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
                 <h2><a href="https://bhuber23.github.io/TriviaGame/">Trivia Game</a></h2>
             </div>
             <div class="col-lg-6">
-                <img src="images/pawel-czerwinski-MOs_TzNcQ2Q-unsplash.jpg" alt="Rutgers Info Widget" class="work">
-                <h2>Rutgers Info Widget</h2>
+                <img src="images/giftastic.png" alt="Giftastic" class="work">
+                <h2><a href="https://bhuber23.github.io/giftastic/">Giftastic</a></h2>
             </div>
         
         </div>
@@ -64,6 +64,12 @@
             <div class="col-lg-6">
                 <img src="images/jr-korpa-stwHyPWNtbI-unsplash.jpg" alt="RPG Game" class="work">
                 <h2>RPG Game</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="images/pawel-czerwinski-MOs_TzNcQ2Q-unsplash.jpg" alt="Rutgers Info Widget" class="work">
+                <h2>Rutgers Info Widget</h2>
             </div>
         </div>
         </div>
