--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,8 @@
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <img src="images/serenity-mitchell-jHz1pcO7Zrw-unsplash.jpg" alt="Rock Paper Scissors" class="work">
-                <h2>Rock Paper Scissors</h2>
+                <img src="images/train-scheduler.png" alt="Train Scheduler" class="work">
+                <h2><a href="https://bhuber23.github.io/train-scheduler/">Train Scheduler</h2>
             </div>
             <div class="col-lg-6">
                 <img src="images/jr-korpa-stwHyPWNtbI-unsplash.jpg" alt="RPG Game" class="work">
