--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <img src="images/train-scheduler.png" alt="Train Scheduler" class="work">
-                <h2><a href="https://bhuber23.github.io/train-scheduler/">Train Scheduler</h2>
+                <h2><a href="https://bhuber23.github.io/train-scheduler/">Train Scheduler</a></h2>
             </div>
             <div class="col-lg-6">
                 <img src="images/jr-korpa-stwHyPWNtbI-unsplash.jpg" alt="RPG Game" class="work">
