--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
                 </div>
             </div>
         </div>
+        <div id="grnhse_app"></div>
         <footer class="footer mt-auto py-3 fixed-bottom">
                 <div>
                   <span>Copyright ©</span>
                 </div>
         </footer>
-    
-</body>
+        <script src="https://boards.greenhouse.io/embed/job_board/js?for=shieldcareers"></script>
+    </body>
 </html>
