--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
                   <span>Copyright ©</span>
                 </div>
         </footer>
-        <script src="https://boards.greenhouse.io/embed/job_board/js?for=brittanyhuberdemoaccountsandbox"></script>
+        <script src="https://boards.greenhouse.io/embed/job_board/js?for=shieldcareers"></script>    
     </body>
 </html>
