--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </ul>
             </div>
         </nav>
+        <div id="grnhse_app">Jobs</div>
         <div class="container main-content" id="content">
             <div class="row">
                 <div class="col-lg-12">
@@ -44,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <div id="grnhse_app"></div>
+        
         <footer class="footer mt-auto py-3 fixed-bottom">
                 <div>
                   <span>Copyright ©</span>
