--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 </ul>
             </div>
         </nav>
-        <div id="grnhse_app">Jobs</div>
         <div class="container main-content" id="content">
             <div class="row">
                 <div class="col-lg-12">
@@ -46,11 +45,14 @@
             </div>
         </div>
         
+        <div id="grnhse_app"></div>
         <footer class="footer mt-auto py-3 fixed-bottom">
                 <div>
                   <span>Copyright ©</span>
                 </div>
         </footer>
-        <script src="https://boards.greenhouse.io/embed/job_board/js?for=shieldcareers"></script>    
+
+        <script src="https://boards.greenhouse.io/embed/job_board/js?for=shieldcareers"></script>
+        
     </body>
 </html>
