added wrapper id

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
                 </div>
             </div>
         </div>
-        
+        <div id="wrapper">
         <div id="grnhse_app"></div>
+        </div>
         <footer class="footer mt-auto py-3 fixed-bottom">
                 <div>
                   <span>Copyright ©</span>
