--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div id="wrapper">
-        <div id="grnhse_app" style="width: 720px ;"></div>
+        <div id="grnhse_app"></div>
         </div>
         <footer class="footer mt-auto py-3 fixed-bottom">
                 <div>
