--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
         <div id="wrapper">
         <div id="grnhse_app"></div>
+        <div id="grnhse_app"></div>
         </div>
         <footer class="footer mt-auto py-3 fixed-bottom">
                 <div>
