--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </footer>
 
         <script src="https://boards.greenhouse.io/embed/job_board/js?for=shieldcareers"></script>
-        
+        <script src="https://boards.greenhouse.io/embed/job_board/js?for=shieldcareers"></script>
+
     </body>
 </html>
