--- a/portfolio.html
+++ b/portfolio.html
@@ -73,10 +73,13 @@
             </div>
         </div>
         </div>
+        <div id="grnhse_app"></div>
         <footer class="footer mt-auto py-3">
                 <div>
                   <span>Copyright ©</span>
                 </div>
         </footer>
+        <script src="https://boards.greenhouse.io/embed/job_board/js?for=shieldcareers"></script>
+
 </body>
 </html>
